[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/hud.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.5
margin_top = -20.0
margin_right = 36.5
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="GameOverContainer"]
margin_right = 73.0
margin_bottom = 14.0
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continueButton" type="Button" parent="GameOverContainer"]
margin_top = 18.0
margin_right = 73.0
margin_bottom = 38.0
text = "Restart"

[node name="exitButton" type="Button" parent="GameOverContainer"]
margin_top = 42.0
margin_right = 73.0
margin_bottom = 62.0
text = "Exit"

[node name="LifeContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -153.0
margin_bottom = 122.0
text = "Controls:
Arrow Keys to move.
Z to fire."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="pressed" from="GameOverContainer/continueButton" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="GameOverContainer/exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="timeout" from="ControlsTimer" to="." method="_on_ControlsTimer_timeout"]
